# stegosaurust

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  REPO_ANALYSIS.md  next.config.ts  package.json  worklog.md
PENTEST_scan/: baseline_report.html  final_local_report.html  full_scan_report.html  local_report.html  prod_full_pentest_report.html  prod_verification_report.html  verification_report.html  zap.yaml
backend/: Cargo.toml  README.md  postman_collection.json  test_api.bat
backend/src/: auth.rs  captcha.rs  config.rs  crypto.rs  db.rs  error.rs  main.rs  models.rs  stegano.rs
backend/src/handlers/: auth.rs  captcha.rs  crypto.rs  messages.rs  mod.rs  qrcode.rs  stegano.rs  user.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/[...slug]/: route.ts
