[package]
name = "stegosaurust-backend"
version = "0.1.0-beta"
authors = ["Appsjuragan"]
license = "MIT"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "tokio"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "limit"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JWT Authentication
jsonwebtoken = "9"

# Password hashing
argon2 = "0.5"
password-hash = "0.5"

# Encryption
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# Steganography & Image processing
image = "0.25"
kamadak-exif = "0.5"

# QR Code
qrcode = "0.14"

# Captcha
captcha = "0.0.9"

# Input validation & sanitization
regex = "1"
validator = { version = "0.16", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Async traits
async-trait = "0.1"

# Temporary files
tempfile = "3"

# Static
lazy_static = "1.4"

# CRC for PNG
crc32fast = "1.3"
rust-s3 = "0.37.1"
dotenvy = "0.15.7"

[profile.release]
opt-level = 3
lto = true
